# cadwyn

./: .all-contributorsrc  .gitignore  .linkspector.yml  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  hello.py  index.html  mkdocs.yml  package-lock.json  package.json  plugin.py  pyproject.toml  renovate.json5  ruff.toml  schema.py  tox.ini  ty.toml  wewewe.py
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  daily_tests.yaml  docs.yaml  lint.yaml  publish.yml  publish_docs.yaml  publish_docs.yml  release.yaml  release.yml  test.yaml  typecheck.yaml  validate_links.yaml  validate_links.yml
cadwyn/: __init__.py  __main__.py  _asts.py  _compat.py  _importer.py  _package_utils.py  _render.py  _utils.py  annotation_transformer.py  applications.py  changelogs.py  codegen.py  dependencies.py  exceptions.py  header.py  header_routing.py  main.py  middleware.py  route_generation.py  routing.py  runtime_compat.py  schema_generation.py
cadwyn/_codegen/: README.md  __init__.py  ast_comments.py  asts.py  common.py  main.py  reprs.py
cadwyn/_internal/: context_vars.py
cadwyn/codegen/: README.md  __init__.py  _asts.py  _common.py  _main.py
cadwyn/static/: docs.html
cadwyn/structure/: __init__.py  common.py  data.py  endpoints.py  enums.py  modules.py  schemas.py  versions.py
cadwyn/verselect/: routing.py
concepts/: index.html
concepts/api_version_header_and_context_variables/: index.html
concepts/api_version_parameter/: index.html
concepts/api_version_parameter_and_context_variables/: index.html
concepts/beware_of_data_versioning/: index.html
concepts/changelogs/: index.html
concepts/cli/: index.html
concepts/code_generation/: index.html
concepts/endpoint_migrations/: index.html
concepts/enum_migrations/: index.html
concepts/main_app/: index.html
concepts/methodology/: index.html
concepts/module_migrations/: index.html
concepts/schema_generation/: index.html
concepts/schema_migrations/: index.html
concepts/service_structure/: index.html
concepts/testing/: index.html
concepts/version_changes/: index.html
concepts/where_to_put_the_version_and_how_to_format_it/: index.html
docs/: CNAME  how_to.md  index.md  plugin.py  quickstart.md  recipes.md  reference.md  theory.md  tutorial.md
docs/concepts/: api_version_header_and_context_variables.md  api_version_parameter.md  api_version_parameter_and_context_variables.md  beware_of_data_versioning.md  changelogs.md  cli.md  code_generation.md  endpoint_migrations.md  enum_migrations.md  header_routing_peculiarities.md  index.md  main_app.md  methodology.md  mission.md  module_migrations.md  schema_generation.md  schema_migrations.md  service_structure.md  testing.md  version_changes.md  where_to_put_the_version_and_how_to_format_it.md
docs/home/: CONTRIBUTING.md
docs/how_to/: extend_openapi.md  index.md  version_with_paths_and_numbers_instead_of_headers_and_dates.md
docs/quickstart/: going_back_in_time_before_the_breaking_change.md  index.md  making_the_breaking_change.md  setup.md  tutorial.md
docs/stylesheets/: extra.css
docs/theory/: design_decisions.md  how_to_build_versioning_framework.md  how_we_got_here.md  literature.md  references.md
home/CHANGELOG/: index.html
home/CONTRIBUTING/: index.html
how_to/: index.html
how_to/change_business_logic/: index.html
how_to/change_endpoints/: index.html
how_to/version_with_paths_and_numbers_instead_of_headers_and_dates/: index.html
quickstart/: index.html
quickstart/going_back_in_time_before_the_breaking_change/: index.html
quickstart/making_the_breaking_change/: index.html
quickstart/setup/: index.html
quickstart/tutorial/: index.html
recipes/: index.html
reference/: index.html
scripts/: fix_links.py  split_md.py
search/: search_index.json
tests/: AGENTS.md  CLAUDE.md  __init__.py  conftest.py  test_applications.py  test_auth_dependencies.py  test_broken_middleware.py  test_changelog.py  test_cli.py  test_codegen.py  test_data_migration.py  test_data_migrations.py  test_fields.py  test_header.py  test_linting.py  test_migration.py  test_namespace_package.py  test_render.py  test_response_model.py  test_router_generation.py  test_router_generation_missing_import.py  test_router_generation_with_from_future_annotations.py  test_router_generation_with_generic.py  test_routing.py  test_separate_input_and_output_schemas.py  test_structure.py
tests/_data/: cli_utils.py  unversioned_schemas.py  utils.py
tests/_resources/: app_for_testing_routing.py  utils.py
tests/codegen/: test_cli.py  test_custom_plugins.py  test_enum.py  test_interactions.py  test_module.py  test_schema_field.py  test_schema_validator.py
tests/runtime_gen/: base_schemas.py  test_enum.py  test_schema_field.py  test_schema_validator.py
tests/test_codegen/: test_cli.py  test_codegen.py  test_interactions.py  test_schema_field.py
tests/test_schema_generation/: test_enum.py  test_schema.py  test_schema_field.py  test_schema_validator.py  test_schema_with_future_annotations.py  test_schema_with_generic.py
tests/test_tutorial/: generate_schemas.py  routes.py  run.py  test_example.py  utils.py
tests/test_tutorial_with_deprecated_features/: generate_schemas.py  run.py
tests/test_tutorial_with_latest/: generate_schemas.py  routes.py  run.py  test_example.py
tests/tutorial/: generate_schemas.py  main.py  routes.py  run.py  test_example.py  test_route_generation.py
tests/tutorial_with_deprecated_features/: generate_schemas.py  routes.py  run.py  test_example.py  utils.py
tests/verselect/: test_main.py  test_routing.py
tests/versioning_styles/: test_any_string_path_versioning.py  test_versioning_styles.py
theory/design_decisions/: index.html
theory/how_to_build_versioning_framework/: index.html
theory/how_we_got_here/: index.html
theory/literature/: index.html
tutorial/: index.html
universi/: __init__.py  _utils.py  codegen.py  exceptions.py  fields.py  header.py  header_routing.py  linting.py  routing.py
(+137 files in other folders)
